--- a/KeyStroker.LogicTests/KeyStroker.LogicTests.csproj
+++ b/KeyStroker.LogicTests/KeyStroker.LogicTests.csproj
@@ -49,7 +49,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KeyClassTest.cs" />
+    <Compile Include="KeyClassTests.cs" />
+    <Compile Include="KeyControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
