Renamed Key to ProgrammableButton
This is to avoid clash with System.Windows.Input enum Key, just makes code more compact to not have to write full qualified namespace everytime.

--- a/KeyStroker.Logic/KeyStroker.Logic.csproj
+++ b/KeyStroker.Logic/KeyStroker.Logic.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Key.cs" />
+    <Compile Include="ProgrammableButton.cs" />
     <Compile Include="KeyController.cs" />
     <Compile Include="Wrappers\SendKeysWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
