--- a/KeyStroker.UserInterface/KeyStroker.UI.csproj
+++ b/KeyStroker.UserInterface/KeyStroker.UI.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="0.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KeyStroker.Logic\KeyStroker.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
