--- a/KeyStroker.Logic/KeyStroker.Logic.csproj
+++ b/KeyStroker.Logic/KeyStroker.Logic.csproj
@@ -43,6 +43,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Profile.cs" />
     <Compile Include="ProgrammableButton.cs" />
     <Compile Include="KeyController.cs" />
     <Compile Include="Wrappers\SendKeysWrapper.cs" />
