--- a/KeyStroker.UserInterface/KeyStroker.UI.csproj
+++ b/KeyStroker.UserInterface/KeyStroker.UI.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.3" />
-    <PackageReference Include="MaterialDesignThemes.MahApps" Version="0.1.5" />
+    <PackageReference Include="MaterialDesignThemes.MahApps" Version="0.1.6-ci2397" />
   </ItemGroup>
 
   <ItemGroup>
