Revert "Added GlobalHotkeyListener and removed old implementation"
This reverts commit 7ce8e9f2f7883d2536b87815aa15c2dc3123efdd.

--- a/KeyStroker.Logic/KeyStroker.Logic.csproj
+++ b/KeyStroker.Logic/KeyStroker.Logic.csproj
@@ -45,9 +45,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hotkey\GlobalHotkeyListener.cs" />
-    <Compile Include="Hotkey\WinHotkey.cs" />
-    <Compile Include="Hotkey\HotkeyModifier.cs" />
+    <Compile Include="BackgroundKeyListener.cs" />
+    <Compile Include="GlobalHotkeyListener.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="ProgrammableButton.cs" />
     <Compile Include="KeyController.cs" />
